<resources>
    <string name="app_name">NotesApp</string>

    <!--Bottom Bar-->
    <string name="notes">Notas</string>
    <string name="search">Busqueda</string>
    <string name="options">Opciones</string>

    <!--Name Buttons-->
    <string name="save_note">Guardar</string>
    <string name="cancel_note">Restaurar</string>

    <!--description image-->
    <string name="description_delete">Eliminar nota</string>
    <string name="add_note">Nota nueva</string>
    <string name="notes_empty">No tienes notas</string>
    <string name="profile_instagram">Perfil de instagram</string>
    <string name="profile_x">Perfil de X</string>
    <string name="profile_linkedin">Perfil de Linkedin</string>
    <string name="profile_github">Perfil de GitHub</string>

    <!--options-->
    <string name="change_mod">Desarrollado por</string>
    <string name="configuration">Sergio Mostacero</string>
    <string name="visit_red">Visita mis redes</string>

    <!--validation save note-->
    <string name="validation_title">El título de la nota no puede estar vacío</string>
    <string name="validation_content">El contenido de la nota no puedo ser vacío</string>
    <string name="save_question">Ingresa contenido de la nota</string>
    <string name="save_confirmation">Nota guardada</string>
    <string name="negation_save">Ocurrió un error. Vuelve a intentarlo luego</string>
    <string name="note_delete">Nota eliminada</string>

    <!--Hint edit text-->
    <string name="hint_content">Ingresa tu descripción aquí</string>
    <string name="hint_title">Ingresa tu título aquí</string>
    <string name="hint_search">Ingresa tu nota a buscar aquí</string>

</resources>