<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.NoteDetailActivity">

    <LinearLayout
        android:id="@+id/linearColors"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view1"
            style="@style/Color_Note"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_background_1" />

        <View
            android:id="@+id/view2"
            style="@style/Color_Note"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_background_2" />

        <View
            android:id="@+id/view3"
            style="@style/Color_Note"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_background_3" />

        <View
            android:id="@+id/view4"
            style="@style/Color_Note"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_background_4" />

        <View
            android:id="@+id/view5"
            style="@style/Color_Note"
            android:background="@drawable/rounded_background_5" />

    </LinearLayout>

    <EditText
        android:id="@+id/etTitle"
        style="@style/Title_Note_Detail"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:hint="@string/hint_title"
        android:inputType="text"
        android:labelFor="@id/etTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearColors"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/etDescription"
        style="@style/Description_Note_Detail"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:autofillHints="name"
        android:gravity="left"
        android:hint="@string/hint_content"
        android:inputType="textMultiLine"
        android:maxLines="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btnSaveNote"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:text="@string/save_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>